fix: scrollbar color

--- a/src/Resources/SASS/scrollable.module.scss
+++ b/src/Resources/SASS/scrollable.module.scss
@@ -9,37 +9,11 @@
   scrollbar-width: thin;
 
   &.dark {
-    scrollbar-color: colors.$bg-dark colors.$hl-dark;
+    scrollbar-color: colors.$hl-dark colors.$bg-dark;
   }
 
   &.light {
-    scrollbar-color: colors.$bg-light colors.$hl-light;
-  }
-
-  &::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: none;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 20px;
-    border: 3px solid;
-  }
-
-  &.dark {
-    &::-webkit-scrollbar-thumb {
-      background-color: colors.$hl-dark;
-      border-color: colors.$bg-dark;
-    }
-  }
-  &.light {
-    &::-webkit-scrollbar-thumb {
-      background-color: colors.$hl-light;
-      border-color: colors.$bg-light;
-    }
+    scrollbar-color: colors.$hl-light colors.$bg-light;
   }
 
 }
